@@ -1,8 +1,13 @@
 package ar.edu.utn.frc.siga.allocation.mapper;
 
-import ar.edu.utn.frc.siga.allocation.dto.response.AcademicEventResponseDto;
+import ar.edu.utn.frc.siga.events.dto.response.AcademicEventResponseDto;
+import ar.edu.utn.frc.siga.events.dto.response.OccurrenceResponseDto;
+import ar.edu.utn.frc.siga.events.dto.response.OccurrenceSlotDto;
+import ar.edu.utn.frc.siga.events.service.AcademicEventService;
+import ar.edu.utn.frc.siga.events.service.OccurrenceService;
 import ar.edu.utn.frc.siga.allocation.dto.response.AllocationResponseDto;
 import ar.edu.utn.frc.siga.allocation.model.Allocation;
+import ar.edu.utn.frc.siga.common.util.Maps;
 import ar.edu.utn.frc.siga.space.dto.response.ClassroomResponseDto;
 import ar.edu.utn.frc.siga.space.service.ClassroomService;
 import lombok.RequiredArgsConstructor;
@@ -15,46 +20,43 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-/**
- * Compone el DTO de una asignación resolviendo el evento académico (vía
- * {@link AcademicEventComposer}) y el aula (vía {@link ClassroomService#findByIds}) —
- * datos ajenos al agregado {@link Allocation}. El fetch/mapeo de esos datos vive acá
- * para que {@link AllocationMapper} sea un mapper puro sobre la entidad, espejo del
- * patrón {@link AcademicEventComposer}.
- */
 @Component
 @RequiredArgsConstructor
 public class AllocationComposer {
 
     private final AllocationMapper mapper;
-    private final AcademicEventComposer eventComposer;
+    private final AcademicEventService academicEventService;
+    private final OccurrenceService occurrenceService;
     private final ClassroomService classroomService;
 
-    /** Composición de una única asignación (delega en el batch con una lista de un elemento). */
     public AllocationResponseDto compose(Allocation allocation) {
-        return composeAll(List.of(allocation)).get(0);
+        return composeAll(List.of(allocation)).getFirst();
     }
 
-    /**
-     * Composición por lote: prefetch de aulas distintas en un solo batch, sin N+1.
-     * Tolerante a aulas inexistentes/borradas (asignaciones históricas): en ese caso el
-     * aula viaja {@code null} en el DTO en vez de lanzar 404.
-     */
     public List<AllocationResponseDto> composeAll(List<Allocation> allocations) {
-        List<AcademicEventResponseDto> events = eventComposer.compose(
-                allocations.stream().map(a -> a.getOccurrence().getEvent()).toList());
+        Set<Long> occurrenceIds = allocations.stream()
+                .map(Allocation::getOccurrenceId).collect(Collectors.toCollection(LinkedHashSet::new));
+        Map<Long, OccurrenceSlotDto> slotByOccurrenceId = Maps.byId(
+                occurrenceService.findSlots(occurrenceIds), OccurrenceSlotDto::occurrenceId);
+
+        Set<Long> eventIds = slotByOccurrenceId.values().stream()
+                .map(OccurrenceSlotDto::eventId).collect(Collectors.toCollection(LinkedHashSet::new));
+        Map<Long, AcademicEventResponseDto> eventDtoById = Maps.byId(
+                academicEventService.findByIds(eventIds), AcademicEventResponseDto::id);
 
         Set<Integer> classroomIds = allocations.stream()
                 .map(Allocation::getClassroomId)
                 .collect(Collectors.toCollection(LinkedHashSet::new));
-        Map<Integer, ClassroomResponseDto> classroomsById = classroomService.findByIds(classroomIds).stream()
-                .collect(Collectors.toMap(ClassroomResponseDto::id, c -> c));
+        Map<Integer, ClassroomResponseDto> classroomsById = Maps.byId(classroomService.findByIds(classroomIds), ClassroomResponseDto::id);
 
         List<AllocationResponseDto> result = new ArrayList<>(allocations.size());
-        for (int i = 0; i < allocations.size(); i++) {
-            Allocation allocation = allocations.get(i);
+        for (Allocation allocation : allocations) {
+            OccurrenceSlotDto slot = slotByOccurrenceId.get(allocation.getOccurrenceId());
+            OccurrenceResponseDto occurrence = new OccurrenceResponseDto(
+                    slot.occurrenceId(), slot.eventId(), slot.date(), slot.status(), slot.startTime(), slot.endTime());
+            AcademicEventResponseDto event = eventDtoById.get(slot.eventId());
             ClassroomResponseDto classroom = classroomsById.get(allocation.getClassroomId());
-            result.add(mapper.toDto(allocation, events.get(i), classroom));
+            result.add(mapper.toDto(allocation, occurrence, event, classroom));
         }
         return result;
     }
